--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: leafo/gh-actions-lua@v5
     - name: make
       run: make
     - name: lua test.lua
